tests/specs/ecosystem/kevinbonnoron/monadojs/0_2_0.test
kevinbonnoron/monadojs/0.2.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS18048 [ERROR]: 'amount' is possibly 'undefined'.
  divide: (amount?: number)=>(source: number)=>source / amount,
                                                        ~~~~~~
    at file://<tmpdir>/src/wrappers/number/number.ts:2:57

TS18048 [ERROR]: 'amount' is possibly 'undefined'.
  minus: (amount?: number)=>(source: number)=>source - amount,
                                                       ~~~~~~
    at file://<tmpdir>/src/wrappers/number/number.ts:3:56

TS18048 [ERROR]: 'amount' is possibly 'undefined'.
  modulo: (amount?: number)=>(source: number)=>source % amount,
                                                        ~~~~~~
    at file://<tmpdir>/src/wrappers/number/number.ts:4:57

TS18048 [ERROR]: 'amount' is possibly 'undefined'.
  plus: (amount?: number)=>(source: number)=>source + amount,
                                                      ~~~~~~
    at file://<tmpdir>/src/wrappers/number/number.ts:5:55

Found 4 errors.

